--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-REACT_APP_HOST_URL='http://localhost:5001' #'https://primaflorabackend-production.up.railway.app'
+REACT_APP_HOST_URL='http://localhost:5001'
