--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-toastify": "^10.0.5",
     "react-tooltip": "^5.27.1",
     "redux-persist": "^6.0.0",
+    "serve": "^14.2.4",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
