--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@types/redux-persist": "^4.3.1",
     "axios": "^1.6.8",
     "draft-js": "^0.11.7",
+    "draft-js-export-html": "^1.4.1",
+    "draft-js-import-html": "^1.4.1",
     "i18next": "^23.11.5",
     "js-cookie": "^3.0.5",
     "react": "^18.3.1",
