--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-tooltip": "^5.27.1",
     "redux-persist": "^6.0.0",
     "serve": "^14.2.4",
+    "styled-components": "^6.1.15",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
@@ -61,6 +62,7 @@
     ]
   },
   "devDependencies": {
+    "@types/styled-components": "^5.1.34",
     "@types/uuid": "^10.0.0",
     "tailwindcss": "^3.4.3"
   }
