--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "i18next": "^23.11.5",
     "js-cookie": "^3.0.5",
     "react": "^18.3.1",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.3.1",
     "react-i18next": "^14.1.2",
     "react-redux": "^9.1.2",
@@ -62,6 +63,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-beautiful-dnd": "^13.1.8",
     "@types/styled-components": "^5.1.34",
     "@types/uuid": "^10.0.0",
     "tailwindcss": "^3.4.3"
